[gd_scene load_steps=9 format=3 uid="uid://b2ko6a4wlwknu"]

[ext_resource type="Texture2D" uid="uid://f1qnl5lw0j27" path="res://assets/player/player.png" id="1_88ik0"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_txu6u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsw57"]
atlas = ExtResource("1_88ik0")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa06l"]
atlas = ExtResource("1_88ik0")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3mef"]
atlas = ExtResource("1_88ik0")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6eqw"]
atlas = ExtResource("1_88ik0")
region = Rect2(72, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2ee6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsw57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa06l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3mef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6eqw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dea45"]
size = Vector2(13, 8)

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_txu6u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_o2ee6")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_dea45")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
